--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/changes/005-create-companies.yaml
   - include:
       file: db/changelog/changes/006-create-users.yaml
+  - include:
+      file: db/changelog/changes/009-create-events.yaml
