--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,13 @@ spring.profiles.active=dev
 
 logging.level.org.springframework.web=DEBUG
 
+#Bucket configuration
+r2.token=${BUCKET_TOKEN}
+r2.access-key=${BUCKET_ACCESS_KEY}
+r2.secret-key=${BUCKET_SECRET_KEY}
+r2.name=${BUCKET_NAME}
+r2.url=${BUCKET_URL}
+r2.public-endpoint=${BUCKET_PUBLIC_ENDPOINT}
+r2.region=auto
 # Enable automatically restarting
 spring.devtools.restart.enabled=true
