la mala pa deepseek

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ r2.url=${BUCKET_URL}
 r2.public-endpoint=${BUCKET_PUBLIC_ENDPOINT}
 r2.region=auto
 
-twitter.token=${X_BEARER_TOKEN}
+twitter.token=AAAAAAAAAAAAAAAAAAAAANUL4QEAAAAAH%2FRIiAhkBburtxMx4G2k9qAu7f8%3DbFKaVFiGSyqrSlYJfmJhAYLKGy8ATp1EEKcVj69KGW4tZZ6iWk
 
 # Enable automatically restarting
 spring.devtools.restart.enabled=true
