--- a/src/main/resources/db/changelog/changes/005-create-companies.yaml
+++ b/src/main/resources/db/changelog/changes/005-create-companies.yaml
@@ -52,12 +52,24 @@ databaseChangeLog:
               - column:
                   name: longitude
                   type: decimal(11,8)
+              - column:
+                  name: owner_id
+                  type: bigint
+                  constraints:
+                    nullable: false
+                    unique: true
         - addForeignKeyConstraint:
             baseTableName: companies
             baseColumnNames: sector_id
             referencedTableName: companies_sector
             referencedColumnNames: id
             constraintName: fk_company_sector
+        - addForeignKeyConstraint:
+            baseTableName: companies
+            baseColumnNames: owner_id
+            referencedTableName: people
+            referencedColumnNames: cc
+            constraintName: fk_owner_id
         - addForeignKeyConstraint:
             baseTableName: companies
             baseColumnNames: formalization_level_id
